# kinova_mj_description

./: CMakeLists.txt
mc_mujoco/: kinova.in.yaml
meshes/: ATI-9105-TW-Mini58-E-X_X.STL  Jig_modified.STL  adapter_kinova_eegen3_FT_side_final.STL  adapter_kinova_eegen3_robot_side.STL
xml/: gen3_7dof_mujoco.xml
